post-patch changes + dystopian colonists

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1315,7 +1315,7 @@
 	job_tec_labour_hero:0 "Labour Hero"
 	job_tec_labour_hero_plural:0 "Labour Heros"
 	job_tec_labour_hero_desc:0 "An individual, recognized for his outstanding labour capabilities and capacities to lead others with respect and dignity."
-	job_tec_labour_hero_effect_desc:0 "£job_tec_labour_hero£ $job_tec_labour_hero_plural$ produce $tec_loc_basic_resources$ based on planet designation, and §Y$tec_loc_unity$§!."
+	job_tec_labour_hero_effect_desc:0 "£job_tec_labour_hero£ $job_tec_labour_hero_plural$ convert $tec_loc_amenities$ (or $tec_loc_trade$) into producing §Y$tec_loc_unity$§! and §Y$tec_loc_basic_resources$§! based on planet designation."
 	mod_job_tec_labour_hero_add:0 "$job_tec_labour_hero$ Jobs"
 	mod_job_tec_labour_hero_per_pop:0 "§G+1§! $job_tec_labour_hero$ Job per $VALUE$ Pops"
 	mod_job_tec_labour_hero_per_pop_short:0 "\n§G+1§! £mod_job_tec_labour_hero_add£ per $VALUE$ £pop£"
@@ -1854,16 +1854,17 @@
 	building_tec_pleasure_palace:0 "Palace of Desire"
 	building_tec_pleasure_palace_plural:0 "Palaces of Desire"
 	building_tec_pleasure_palace_desc:0 "Opulence, riches, pleasure ... whatever you need, whatever you want, you will find it here."
+	building_tec_pleasure_palace_effect:0 "This building is more effective with extra §Y$tec_loc_planet_ascensions$§!"
 
 	job_tec_pleasure_giver:0 "Pleasure Giver"
 	job_tec_pleasure_giver_plural:0 "Pleasure Giver"
 	job_tec_pleasure_giver_desc:0 "Consecrated to a life of providing pleasure, rest and entertainment, these dedicated individuals ensure the joyful distractions and excellences to whoever seeks new experiences."
-	job_tec_pleasure_giver_effect_desc:0 "£job_servant£ $job_tec_pleasure_giver_plural$ turn §Y[tec_scripted_loc_amenities_trade_upkeeps_normal]§! into §Y$tec_loc_unity$§!, §Y$tec_loc_happiness$§! and a bonus based on the §Y$tec_loc_planet_designation$§!."
-	job_tec_pleasure_giver_effect_desc_standard:0 "£job_servant£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_unity$§!, §Y$tec_loc_happiness$§! and a bonus based on the §Y$tec_loc_planet_designation$§!."
-	job_tec_pleasure_giver_effect_desc_corporate:0 "£job_servant£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_trade$§! into §Y$tec_loc_unity$§!, §Y$tec_loc_happiness$§! and a bonus based on the §Y$tec_loc_planet_designation$§!."
+	job_tec_pleasure_giver_effect_desc:0 "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$ turn §Y[tec_scripted_loc_amenities_trade_upkeeps_normal]§! into §Y$tec_loc_unity$§!, §Y$tec_loc_happiness$§! and a bonus based on the §Y$tec_loc_planet_designation$§!."
+	job_tec_pleasure_giver_effect_desc_standard:0 "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_unity$§!, §Y$tec_loc_happiness$§! and a bonus based on the §Y$tec_loc_planet_designation$§!."
+	job_tec_pleasure_giver_effect_desc_corporate:0 "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_trade$§! into §Y$tec_loc_unity$§!, §Y$tec_loc_happiness$§! and a bonus based on the §Y$tec_loc_planet_designation$§!."
 	mod_job_tec_pleasure_giver_add:0 "$job_tec_pleasure_giver$ Jobs"
 	mod_job_tec_pleasure_giver_per_pop:0 "§G+1§! $job_tec_pleasure_giver$ Job Per $VALUE$ Pops"
-	mod_job_tec_pleasure_giver_per_pop_short:0 "\n§G+1§! £mod_job_servant£ per $VALUE$ £pop£"
+	mod_job_tec_pleasure_giver_per_pop_short:0 "\n§G+1§! £job_tec_pleasure_giver£ per $VALUE$ £pop£"
  # /
  # Zombies
 	building_tec_reanimation_necropoli_1:0 "Reanimation Halls"
