--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -847,16 +847,16 @@
 
 	concept_tec_specialist_job_tec_pleasure_giver: "$job_tec_pleasure_giver$"
 	concept_tec_specialist_job_tec_pleasure_giver_alias: "$job_tec_pleasure_giver$"
-	concept_tec_specialist_job_tec_pleasure_giver_icon: "£job_servant£ $job_tec_pleasure_giver$"
+	concept_tec_specialist_job_tec_pleasure_giver_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver$"
 	concept_tec_specialist_job_tec_pleasure_giver_plural: "$job_tec_pleasure_giver_plural$"
-	concept_tec_specialist_job_tec_pleasure_giver_plural_icon: "£job_servant£ $job_tec_pleasure_giver_plural$"
+	concept_tec_specialist_job_tec_pleasure_giver_plural_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$"
 	concept_tec_specialist_job_tec_pleasure_giver_desc: "§L$job_tec_pleasure_giver_desc$§!\n\n$job_tec_pleasure_giver_effect_desc_standard$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_produces$:\n\n"
 
 	concept_tec_specialist_job_tec_pleasure_giver_corporate: "$job_tec_pleasure_giver$"
 	concept_tec_specialist_job_tec_pleasure_giver_corporate_alias: "$job_tec_pleasure_giver$"
-	concept_tec_specialist_job_tec_pleasure_giver_corporate_icon: "£job_servant£ $job_tec_pleasure_giver$"
+	concept_tec_specialist_job_tec_pleasure_giver_corporate_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver$"
 	concept_tec_specialist_job_tec_pleasure_giver_corporate_plural: "$job_tec_pleasure_giver_plural$"
-	concept_tec_specialist_job_tec_pleasure_giver_corporate_plural_icon: "£job_servant£ $job_tec_pleasure_giver_plural$"
+	concept_tec_specialist_job_tec_pleasure_giver_corporate_plural_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$"
 	concept_tec_specialist_job_tec_pleasure_giver_corporate_desc: "§L$job_tec_pleasure_giver_desc$§!\n\n$job_tec_pleasure_giver_effect_desc_corporate$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_produces$:\n\n"
 
 	concept_tec_specialist_job_tec_naval_operator_drone: "$job_tec_naval_operator_drone$"
