removed leader caching + more

--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -171,7 +171,7 @@
 
 		councilor_civic_tec_regular_political_virtue:0 "Democratic Advisor"
 		councilor_civic_tec_regular_political_virtue_female:0 "$councilor_civic_tec_regular_political_virtue$"
-		councilor_civic_tec_regular_political_virtue_desc:0 "The empire's $TITLE$ is tasked with searching the best democratic ways of representing the diverse ideas of its society."
+		councilor_civic_tec_regular_political_virtue_desc:0 "The empire's $TITLE$ is tasked with protecting the constitutional order of the empire and ensuring matters of governance remain a public affair."
 		councilor_civic_tec_regular_political_virtue_custom_modifier:0 "NOT USED"
 		# Improve loc ^
 
@@ -456,7 +456,7 @@
 
 		councilor_civic_tec_regular_labour_unions:0 "Global Union Representative"
 		councilor_civic_tec_regular_labour_unions_female:0 "$councilor_civic_tec_regular_labour_unions$"
-		councilor_civic_tec_regular_labour_unions_desc:0 "The $TITLE$ is in charge of ensuring the needs of all labour unions are met, on the maximum degree possible."
+		councilor_civic_tec_regular_labour_unions_desc:0 "The $TITLE$ is tasked with representing and advocating for every Labor Union within the empire, and ensuring their voices are heard."
 		councilor_civic_tec_regular_labour_unions_custom_modifier:0 "NOT USED"
 
 		councilor_civic_tec_regular_star_settlers:0 "Stellar Guide"
