--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -19,7 +19,7 @@
 # §Y thisisyellow §!
 
 # --------------------------- MAINSCREEN -------------------------------- #DATE DATE DATE DATE
-	TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R6B Hotfix I (§Y21-08-2023§!)"
+	TEC_EVOLVED_VERSION:0 "Evolved Version: v0.9R6B Hotfix I (§Y22-08-2023§!)"
 	TEC_EVOLVED_TOOLTIP:0 "§E$TEC_EVOLVED_TITLE$§!\n§Y$TEC_EVOLVED_STEAMLINK$§!\n$TEC_EVOLVED_REPORTS$\n\n$TEC_EVOLVED_DONATIONS$"
 	TEC_EVOLVED_TITLE:0 "Stellaris Evolved"
 	TEC_EVOLVED_STEAMLINK:0 "Clicking this item will open the mod Steam Workshop page"
@@ -94,7 +94,7 @@
 	tec_loc_edict_funds_icon:0 "£mod_country_edict_fund_add£"
 	tec_loc_edict_funds:0 "$tec_loc_edict_funds_icon$  $MOD_COUNTRY_EDICT_FUND_ADD$"
 	tec_loc_naval_cap: "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$"
-	tec_loc_navalcap_from_jobs:0 "$mod_pop_job_naval_mult$ from £job£ Jobs"
+	tec_loc_navalcap_from_jobs:0 "$mod_pop_job_naval_mult$"
 	tec_loc_admin_cap: "£mod_country_admin_cap_add£ $MOD_COUNTRY_ADMIN_CAP_ADD$"
 
 	tec_loc_jobs: "£job£ Jobs"
