--- a/localisation/english/zz_evolved_factions_l_english.yml
+++ b/localisation/english/zz_evolved_factions_l_english.yml
@@ -564,7 +564,7 @@
 # ------------------------------------------------- Elitist
  format.pop_faction.conservatives:0 "<conservatives_names_1> <conservatives_names_2>"
  pft_conservatives:2 "Elitist Faction"
- pft_conservatives_desc:5 "Elitist Factions prioritize the assignment of resources to a ruling specialized elite. They tend to favor policies and laws focused on boosting the performance and comfort of highly trained and skilled leaders, over diversity and plurality.\n\n§L$ethic_green$ Ethos§!"
+ pft_conservatives_desc:5 "Elitist Factions prioritize the assignment of resources to a ruling specialized elite. They tend to favor policies and laws focused on boosting the performance and comfort of highly trained and skilled leaders, over diversity and plurality.\n\n§L$ethic_elitist$ Ethos§!"
  tec_elitist_visual_ethic:2 "£ethic_elitist£"
  # --------------- Demands
 	TEC_FAC_ELI_TRAINED_LEADERS_1:0 "Elite of Elites"
