Debug effects for ascending

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -3525,3 +3525,10 @@ tech_reverse_advanced_dome: " "
 
  TEC_SYNTH_UNLOCK_T3_PROJECT:0 "Artificial Desires"
  TEC_SYNTH_UNLOCK_T3_PROJECT_DESC:0 "Self-analysis will allow us to reach a higher state of synthetic development, and our platforms will support way better parts with time; we just only need to focus and employ more research efforts."
+
+tec_ascend_debug.1.name: "Debug: Choose Main Ascension Path"
+tec_ascend_debug.1.desc: "Choose the Main Ascension Path for your hybrid ascension path"
+
+tec_ascend_debug.1.bio: "Genetic"
+tec_ascend_debug.1.psi: "Psionic"
+tec_ascend_debug.1.cyb: "Cybernetic"
