Small fixed and loc fixes

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1812,7 +1812,7 @@
 	job_tec_geneticist_drone:0 "Geneticist Drone"
 	job_tec_geneticist_drone_plural:0 "Geneticist Drones"
 	job_tec_geneticist_drone_desc:0 "TO DO."
-	ob_tec_geneticist_effect_desc:0 "£job_tec_geneticist£ $job_tec_geneticist_plural$ turn §Y$tec_loc_basic_resources$§! into §Y$tec_loc_research_resources$§! and §Y$tec_loc_organic_assembly$§!"
+	job_tec_geneticist_drone_effect_desc:0 "£job_tec_geneticist£ $job_tec_geneticist_drone_plural$ turn §Y$tec_loc_basic_resources$§! into §Y$tec_loc_research_resources$§! and §Y$tec_loc_organic_assembly$§!"
 	mod_job_tec_geneticist_drone_add:0 "$job_tec_geneticist_drone$ Jobs"
 	mod_job_tec_geneticist_drone_per_pop:0 "§G+1§! $job_tec_geneticist_drone$ Job Per $VALUE$ Pops"
 	mod_job_tec_geneticist_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_geneticist_drone_add£ per $VALUE$ £pop£"
@@ -2117,7 +2117,7 @@
 		job_tec_replicator_drone:0 "Roboticist Drone"
 		job_tec_replicator_drone_plural:0 "Roboticist Drones"
 		job_tec_replicator_drone_desc:0 "These drones build robots, that the robots may work for the Hive Mind."
-		job_tec_replicator_drone_effect_desc:0 "£job_tec_replicator_drone£ $job_tec_replicator_drone_plural$ turn [root.GetTecRoboticistUpkeep] into new £pop£ §YRobot Pops§!"
+		job_tec_replicator_drone_effect_desc:0 "£job_tec_replicator_drone£ $job_tec_replicator_drone_plural$ turn [root.tec_roboticist_upkeep] into new £pop£ §YRobot Pops§!"
 
 		mod_job_tec_replicator_drone_add:0 "$job_tec_replicator_drone$ Jobs"
 		mod_job_tec_replicator_drone_per_pop:0 "§G+1§! $job_tec_replicator_drone$ Job per $VALUE$ Pops"
@@ -2207,7 +2207,7 @@
 		job_tec_master_roboticist:0 "Master Roboticist"
 		job_tec_master_roboticist_plural:0 "Master Roboticists"
 		job_tec_master_roboticist_desc:0 "Only a few can reach the degree of perfection in artificing and assmebling synthetics or cybernetics that these individuals have achieved, now consecrated to increase the empire workforce, exponentially."
-		job_tec_master_roboticist_effect_desc:0 "£job_tec_master_roboticist£ $job_tec_master_roboticist_plural$ convert [root.GetTecRoboticistUpkeep] into §Y$tec_loc_assembly$§! and £engineering£ §YEngineering Research§! based on the building upgrade, and §Y$tec_loc_amenities$§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
+		job_tec_master_roboticist_effect_desc:0 "£job_tec_master_roboticist£ $job_tec_master_roboticist_plural$ convert [root.tec_roboticist_upkeep] into §Y$tec_loc_assembly$§! and £engineering£ §YEngineering Research§! based on the building upgrade, and §Y$tec_loc_amenities$§!.\n\n§HThis job is affected by £building£ Assembly Building upgrades.§!"
 		mod_job_tec_master_roboticist_add:0 "$job_tec_master_roboticist$ Jobs"
 		mod_job_tec_master_roboticist_per_pop:0 "§G+1§! $job_tec_master_roboticist$ Job per $VALUE$ Pops"
 		mod_job_tec_master_roboticist_per_pop_short:0 "\n§G+1§! £mod_job_roboticist_add£ per $VALUE$ £pop£"
