Small bug fixes

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -2762,7 +2762,7 @@
 		building_tec_cyberpsionic_extractor_plural:0 "Dimensional Extractors"
 		building_tec_cyberpsionic_extractor_desc:0 "This structure, made of exotic and powerful materials, harness residual anomalous energy into refined dust that can be used for state of the art cybernetic and psionic creations."
 
-		building_tec_cyberpsionic_extractor_entropy:0 "Total Empire Entropy: §R[tec_entropy_display]%§!\n\nThis £building£ §YBuilding§! has its production increased by §R$mod_tec_entropy$§!\nScaling Effect from Entropy: §G[tec_entropy_scaling]x§!"
+		building_tec_cyberpsionic_extractor_entropy:0 "Total Empire Entropy: §R[tec_entropy_display]%§!\n\nThis £building£ §YBuilding§! has its §Y$tec_loc_energy$§! production increased by §R$mod_tec_entropy$§!\nScaling Effect from Entropy: §G[tec_entropy_scaling]x§!"
 		building_tec_cyberpsionic_extractor_danger_0:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §BNon existant§!"
 		building_tec_cyberpsionic_extractor_danger_1:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §GLow§!"
 		building_tec_cyberpsionic_extractor_danger_2:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §YModerate§!"
