Fixed planetary ai nodes

--- a/localisation/english/zz_evolved_leaders_l_english.yml
+++ b/localisation/english/zz_evolved_leaders_l_english.yml
@@ -386,5 +386,7 @@
 
 
 tec_aiauth_ruler: "Ruler AI Node"
-tec_aiauth_planetary_governor: "[event_target:tec_aiauth_planetary_node_planet.GetName] AI Node"
+tec_aiauth_planetary_governor_planet: "[planet.GetName]"
+tec_aiauth_planetary_governor_planet_fallback: "Planetary"
+tec_aiauth_planetary_governor: "[tec_aiauth_planetary_governor_planet] AI Node"
 tec_aiauth_planetary_governor_desc: ""
