Fixed planetary node xp gain not working when newly created and not interacted with

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1641,3 +1641,8 @@
 
 	leader_trait_shroud_preacher_effect:1 "$t$Every §Y10 Years§! grants 2 £pop£ Pops the §Y$modifier_tec_shroud_touched$§! modifier, providing §G+25%§! £job£ Output."
  leader_trait_knowledge_for_the_masses_effect:0 "$t$£trigger_tec_research£ Research from $mod_base_pop_category_normal_resources$: §G+$@trait_knowledge_masses_research_amt$§!"
+
+ leader_trait_tec_debug_councilor: "DEBUG If YOU SEE SCREAM AT EVOLVED"
+ leader_trait_tec_debug_councilor_desc: "DEBUG If YOU SEE SCREAM AT EVOLVED"
+ leader_trait_tec_debug_non_councilor: "DEBUG If YOU SEE SCREAM AT EVOLVED"
+ leader_trait_tec_debug_non_councilor_desc: "DEBUG If YOU SEE SCREAM AT EVOLVED"
