Fixing some small changes to 3.9, fixed stewards, now considered swaps of politicians x2, fixed a few inlines related to em, added trader effect type and abstracted effects to inlines, fixed clerk trickle up, fixed numismatic priest, added numismatic drone and now numismatic deal can be given to trade machines

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -51,6 +51,7 @@
 
 	job_manager_icon:0 "£job_manager£"
 	job_bureaucrat_icon:0 "£job_bureaucrat£"
+	job_steward_icon:0 "£job_steward£"
 	job_tec_ai_operator_icon:0 "£job_tec_ai_operator£"
 	job_tec_ai_ordinator_icon:0 "£job_tec_ai_ordinator£"
 
@@ -1549,12 +1550,21 @@
 	building_tec_trade_machine_stonks_desc:0 "Selling thin air with thin air, here the trade processes collide to create a unlimited amount of variable devaluability trade value, with a dedicated monitor to control the stock changes at a local, general and galactic level."
 
 	job_tec_trade_drone:0 "Trade Drone"
-	job_tec_trade_drone_plural:0 " Drones"
+	job_tec_trade_drone_plural:0 "Trade Drones"
 	job_tec_trade_drone_desc:0 "Built with insider trading operational exchangers, and making instantenously gargantuan amounts of calculations, these drones have the only and one purpose of amass the maximum amount of trade, generally interchanged by better processing capacities or equipment."
 	job_tec_trade_drone_effect_desc:0 "£job_tec_trade_drone£ $job_tec_trade_drone_plural$ consumes a small amount of $tec_loc_energy$ to generate §Y$tec_loc_trade_value$§!."
 	mod_job_tec_trade_drone_add:0 "$job_tec_trade_drone$ Jobs"
 	mod_job_tec_trade_drone_per_pop:0 "§G+1§! $job_tec_trade_drone$ Job per $VALUE$ Pops"
-	mod_job_tec_trade_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_trade_specialist_add£ per $VALUE$ £pop£"
+	mod_job_tec_trade_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_trade_drone_add£ per $VALUE$ £pop£"
+	
+	
+	job_tec_numismatic_drone:0 "Numismatic Drone"
+	job_tec_numismatic_drone_plural:0 "Numismatic Drones"
+	job_tec_numismatic_drone_desc:0 "These drones have been provided the zealousness of the followers of Numa, facilitating to squeeze every last drop of value from deals carried out."
+	job_tec_numismatic_drone_effect_desc:0 "£job_tec_numismatic_drone£ $job_tec_numismatic_drone_plural$ consumes a small amount of $tec_loc_energy$ to generate §Y$tec_loc_trade_value$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_unity$§!."
+	mod_job_tec_numismatic_drone_add:0 "$job_tec_numismatic_drone$ Jobs"
+	mod_job_tec_numismatic_drone_per_pop:0 "§G+1§! $job_tec_numismatic_drone$ Job per $VALUE$ Pops"
+	mod_job_tec_numismatic_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_numismatic_drone_add£ per $VALUE$ £pop£"
  # /
  # ------------------------------------------------- Machine Anglers
 	building_tec_machine_anglers_extractor:0 "Passive Hydro-Extractor"
@@ -3685,6 +3695,7 @@
 	mod_tec_specialist_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_pop_category_specialists$"
 	mod_tec_worker_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_pop_category_workers$"
 	mod_tec_slave_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_pop_category_slave$"
+	mod_tec_criminal_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_planet_criminals$"
 	mod_tec_pop_lifestyle_trade_value_add: "$tec_loc_trade_value$ from £pop£ Pops"
 	mod_tec_planet_automation_mult: "£trigger_tec_automation£ Automated Production Output"
 	mod_tec_tech_rare_draw_chance_mult: "Chance for §MRare§! Research Options"
