--- a/localisation/english/zz_evolved_modifiers_l_english.yml
+++ b/localisation/english/zz_evolved_modifiers_l_english.yml
@@ -606,5 +606,6 @@
  resolution_galcom_elitist_ethic_modifier: "$resolution_galcom_ethic_modifier$"
  resolution_galcom_pluralist_ethic_modifier: "$resolution_galcom_ethic_modifier$"
 
-
+ divine_algorithm_trader_gestalt:0 "$divine_algorithm$"
+ divine_algorithm_trader_gestalt_desc:0 "$divine_algorithm_desc$"
 
