--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -51,10 +51,12 @@
  tr_mercantile_trickle_up_economics_gestalt_delayed:0 "Chains of interlinked semi-emotional emulator modules on our menial drones will surely increase our margin of benefit."
 
  tr_mercantile_commercial_enterprise_gestalt:0 "Supplementary Trading Processing"
- tr_mercantile_commercial_enterprise_gestalt_tooltip:0 "£building£ §Y$building_tec_trade_machine_1$§! and §Y$building_tec_trade_machine_stonks$§! buildings provide §Y1§! extra £job_tec_trade_drone£ §Y$job_tec_trade_drone$ Job§! per level.\nHabitat §Y$district_hab_commercial_plural$§! and §Y$district_tec_hab_arcology_trade_plural$§!, Ring World §Y$district_tec_rw_trade_plural$§! and Ecumenopolis §Y$district_tec_arcology_trade_plural$§! also produce additional £job_tec_trade_drone£ §Y$job_tec_trade_drone$ Jobs§!."
+ tr_mercantile_commercial_enterprise_gestalt_tooltip:0 "£building£ §Y$building_tec_trade_machine_1$§! and §Y$building_tec_trade_machine_stonks$§! buildings provide §Y1§! extra £job_tec_trade_drone£ §Y$job_tec_trade_drone$ Job§! per level.\nHabitat §Y$district_hab_commercial_plural$§! and §Y$district_tec_hab_arcology_trade_plural$§!, Ring World §Y$district_tec_rw_trade_plural$§! and Ecumenopolis §Y$district_tec_arcology_trade_plural$§! also provide additional £job_tec_trade_drone£ §Y$job_tec_trade_drone$ Jobs§!."
  tr_mercantile_commercial_enterprise_gestalt_delayed:0 "Higher initial investments will convey into higher gains for our collective."
 
- tr_mercantile_finish_desc:4 "Trade Value: §G+10%§!.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
+ tr_mercantile_commercial_enterprise_desc:1 "$tec_loc_amenities$ from §Y$job_trader_plural_with_icon$§!: §G+2§!\nHabitat §Y$district_hab_commercial_plural$§! and §Y$district_tec_hab_arcology_trade_plural$§!, Ring World §Y$district_tec_rw_trade_plural$§! and Ecumenopolis §Y$district_tec_arcology_trade_plural$§! also provide additional §Y$job_trader_with_icon$§! Jobs."
+
+ tr_mercantile_finish_desc:4 "$MOD_TRADE_VALUE_MULT$: §G+10%§!.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
  tr_mercantile_federations_finish_desc:0 "$MOD_TRADE_VALUE_MULT$: §G+10%§!\nGrants access to the §Y$trade_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YArtifice§! will be available.§!\n"
 
 # ------------------------------------------------- Prosperity
