--- a/localisation/english/!!_mod_compo_l_english.yml
+++ b/localisation/english/!!_mod_compo_l_english.yml
@@ -1128,6 +1128,8 @@
  gpm_col_megalopolis_research_desc: " "
  col_tec_fallback: "AI Fallback Designation"
  col_tec_fallback_desc: "You should not see this"
+ col_tec_force: "Evolved Force Designation"
+ col_tec_force_desc: "You should not see this"
 
 # deposits
 
