orbital autoassembler + other changes(habs midway)

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -103,6 +103,9 @@
 	tec_loc_designation: "£stability£ Designation"
 	tec_loc_planet_designation: "£stability£ Planet Designation"
 
+	tec_loc_planet_decision: "£planet£ Planetary Decisions"
+	tec_loc_planetary_decision: "$tec_loc_planet_decision$"
+
 	tec_loc_district: "£district£ $DISTRICT$"
 	tec_loc_districts: "£district£ $DISTRICTS$"
 	tec_loc_building: "£building£ $BUILDING$"
