--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -707,16 +707,39 @@ l_english:
 	district_tec_hab_extraction:0 "Orbital Extraction District"
 	district_tec_hab_extraction_plural:0 "$district_tec_hab_extraction$s"
 	district_tec_hab_extraction_desc:0 "Large sections of the central orbital habitat are repurposed to coordinate the sub-orbitals and mining stations around the system, increasing their efficiency and allowing a proper transmission of manpower and resources amongsts each one."
-	district_tec_hab_extraction_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_basic_resources$§! based on the the number of §YOrbitals§! of its type."
-	district_tec_hab_extraction_effect_buildings:0 "- Increases the effects of §Y£building£ Habitat Orbital Buildings§!."
-	district_tec_hab_extraction_effect_swap:0 "- Can be replaced by specialized §Y£district£ Menial Districts§! via §Y$tec_loc_planet_decision$§!."
+	district_tec_hab_extraction_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_basic_resources$§! based on the the number of §YOrbitals§! of its type (£energy£ £minerals£), or §Y£building£ Hydroponic§! buildings (£food£)."
+	district_tec_hab_extraction_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Habitat Orbital Buildings§!."
+	district_tec_hab_extraction_effect_swap:0 "$t$- Replaceable via §Y$tec_loc_planet_decision$§!."
+	district_tec_hab_extraction_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_energy$ §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§! $TABBED_NEW_LINE$ $tec_loc_minerals$ §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!\n\n"
 
+	# Energy
+	district_hab_energy_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_energy$§! based on the the number of §YOrbitals§! of its type (£energy£)"
+	district_hab_energy_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Energy Orbital Buildings§!."
+	district_hab_energy_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_energy$ §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§!\n\n"
+	# Minerals
+	district_hab_mining_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_minerals$§! based on the the number of §YOrbitals§! of its type (£minerals£)"
+	district_hab_mining_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Minerals Orbital Buildings§!."
+	district_hab_mining_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_minerals$ §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!\n\n"
 	# Food
 	district_tec_hab_food:0 "Hydroponic District"
 	district_tec_hab_food_plural:0 "Hydroponic Districts"
 	district_tec_hab_food_desc:0 "Entire corridors and sections of this Habitat are filled with hydroponic installations generating biological material with artificially enhanced cycles."
 	# \n\nDue to the special requirements this district needs, it's only possible to obtain when the habitat is built §Yorbiting§! a resourceless §YGas giant§! or §YFrozen planet§!."
+	district_tec_hab_food_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_food$§! based on the the number of §Y£building£ Hydroponic§! buildings of its type (£food£), and the Habitat Upgrade level"
+	district_tec_hab_food_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Food Orbital Buildings§!."
+	district_tec_hab_food_effect_orbitals:0 "\n§HCurrent Hydroponic Boost:§! $TABBED_NEW_LINE$ $tec_loc_food$ +§Y[this.GetHydroponicNumbers]§!\n\n"
 
+	# Science
+	district_hab_science_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_research_resources$§! based on the the number of §YOrbitals§! of its type (£minerals£)"
+	district_hab_science_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Research Orbital Buildings§!."
+	district_hab_science_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_research$ §Y[solar_system.GetNumOrbitalsScience]/[solar_system.GetMaxOrbitalsScience]§!\n\n"
+
+	# Commercial
+	district_hab_commercial_effect_production:0 ""
+	district_hab_commercial_effect_buildings:0 ""
+	district_hab_commercial_effect_orbitals:0 ""
+
+	# Arcologies
 	district_tec_hab_arcology_housing:0 "Habitation Module"
 	district_tec_hab_arcology_housing_plural:0 "Habitation Modules"
 	district_tec_hab_arcology_housing_desc:0 "A whole part of the Habitat Arcology World is dedicated to blocks after blocks of efficient and advanced housings, constantly surveyed and maintained."
@@ -748,6 +771,29 @@ l_english:
 	district_tec_hab_arcology_leisure:0 "Utility Module"
 	district_tec_hab_arcology_leisure_plural:0 "Utility Modules"
 	district_tec_hab_arcology_leisure_desc:0 "General use and purpose sections of the Habitat Arcology World left for rest, maintenance or overall caring of the population."
+ # /
+ # District decisions
+	decision_tec_habitat_unlock_generator:0 "Upgrade Orbital Generators"
+	decision_tec_habitat_unlock_generator_desc:0 "--"
+	decision_tec_habitat_unlock_generator_effects:0 "Adds the £district£ $district_hab_energy$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_energy$§!, based on the number of £minerals£ Energy Orbitals, and provide §Y£job_technician£ Technician§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_energy$.§!\n\n§RThis decision can't be undone§!"
+	decision_tec_habitat_unlock_generator_effects_replace_extraction:0 "Adds the £district£ $district_hab_energy$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_energy$§!, based on the number of £minerals£ Energy Orbitals, and provide §Y£job_technician£ Technician§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision can't be undone§!"
+
+	decision_tec_habitat_unlock_mining:0 "Upgrade Orbital Mining Bays"
+	decision_tec_habitat_unlock_mining_desc:0 "--"
+	decision_tec_habitat_unlock_mining_effects:0 "Adds the £district£ $district_hab_mining$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_minerals$§!, based on the number of £minerals£ Mining Orbitals, and provide §Y£job_miner£ Miner§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_mining$.§!\n\n§RThis decision can't be undone§!"
+	decision_tec_habitat_unlock_mining_effects_replace_extraction:0 "Adds the £district£ $district_hab_mining$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_minerals$§!, based on the number of £minerals£ Mining Orbitals, and provide §Y£job_miner£ Miner§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision can't be undone§!"
+
+	decision_tec_habitat_unlock_farming:0 "Upgrade Orbital Hydroponics"
+	decision_tec_habitat_unlock_farming_desc:0 "--"
+	decision_tec_habitat_unlock_farming_effects:0 "Adds the £district£ $district_tec_hab_food$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_food$§!, based on the number of £building£ Hydroponic Buildings, and provide §Y£job_farmer£ Agricultural§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_tec_hab_food$.§!\n\n§RThis decision can't be undone§!"
+	decision_tec_habitat_unlock_farming_effects_replace_extraction:0 "Adds the £district£ $district_tec_hab_food$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_food$§!, based on the number of £building£ Hydroponic Buildings, and provide §Y£job_farmer£ Agricultural§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision cannot be undone§!"
+
+
+	decision_tec_orbital_autobuilder_focus_minor:0 "Automate Orbital Assembly - Minor Orbitals"
+	decision_tec_orbital_autobuilder_focus_minor_desc:0 "Priorizes the production of §YMinor Orbitals§! on suitable planets."
+	decision_tec_orbital_autobuilder_focus_minor_effects:0 "Priorized §YMinor Orbital§! creation"
+
+
  # /
 # /
 
