--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -573,8 +573,8 @@
 #----------------------------------------------------------- §L£tec_civic_feature£§!
 
  # Vanilla
-	civic_environmentalist:0 "§L£tec_civic_feature£§!Environmentalism"
-	civic_environmentalist_desc:0 "['concept_tec_feature_civic']\n['concept_tec_terraformer_civic']\n\nThe economy of this Civilization is shaped in accordance with the problems of maximizing the industrial efficiency and usage of natural resources.\n"
+	civic_environmentalist:0 "§L£tec_civic_feature£§!Nature Rangers"
+	civic_environmentalist_desc:0 "['concept_tec_feature_civic']\n['concept_tec_terraformer_civic']\n\nA big effort is done from this Civilization to ensure natural resources are safeguarded and properly used, without altering or losing the variety and goods nature offers.\n"
 	civic_environmentalist_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£planet£ Ecological Preservation§!\nUnlocks the ['concept_tec_decision_tec_environment_enhance_icon'] decision, which add valuable §Y$tec_loc_deposits$§! to the planet.\nUnlocks the ['concept_tec_decision_tec_environment_preserve_icon'] decision, which can remove negative §Y£planet£ Planet modifiers§!.\n\n$tec_loc_c_unlocks_feature$ §H£planet£ Environmental Connection§!\nMost §Y£blocker£ Natural Blockers§! provide §Y£housing£ Housing§! and §Y£job£ Jobs§!.\nClearing such blockers will provide §Y$tec_loc_planet_features$§! providing similar bonuses.\n\n$tec_loc_c_unlocks_feature$ §H£building£ $building_tec_eco_environmentalist_center$§!\n§Y£building£ $building_tec_eco_environmentalist_center_plural$§! are planet-unique and can be built on £planet£ Habitable Planets, providing §Y£blocker£ Natural Blockers§! each §G25§! years. The process can be accelerated on all planets where the building is present via £edict£ Edict.\n\n$tec_loc_c_modifiers$"
 	# This is moved to other civic
 	# \n\n$tec_loc_c_unlocks_building$ §H£building£ $building_ranger_lodge$§!\n£building£ §Y$building_ranger_lodge$s§! generate extra §Y£blocker£ Blockers§!, makes £planet£ Ecological Features produce §Y$tec_loc_unity$§! and provide ['concept_tec_worker_job_ranger_plural_icon'] jobs.\n\n$tec_loc_c_unlocks_holding$ §H£building£ $holding_park_ranger_lodge$§!\n£building£ §Y$holding_park_ranger_lodge$s§! bring the effects of §Y$building_ranger_lodge$§! to vassals.
@@ -733,6 +733,11 @@
 		civic_tec_regular_eco_keepers_desc:0 "['concept_tec_feature_civic']\n['concept_tec_terraformer_civic']\n\nPeople of this society have learnt to co-exist in genuine harmony with Nature. Enjoying it's simple beauty, they live a true spiritual and ascetic life."
 		civic_tec_regular_eco_keepers_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£planet£ Ecological Healing§!\nUnlocks the ['concept_tec_decision_tec_environment_enhance_icon'] decision, which add valuable §Y$tec_loc_deposits$§! to the planet.\nUnlocks the ['concept_tec_decision_tec_environment_harmony_icon'] decision, which can remove negative §Y£planet£ Planet modifiers§!.\n\n$tec_loc_c_unlocks_feature$ §H£planet£ Environmental Harmonization§!\nMany §Y£planet£ Rare Planetary Features§! and most §Y£blocker£ Natural Blockers§! provide §Y$tec_loc_housing$§!, §Y$tec_loc_amenities$§! and ['concept_tec_worker_job_tec_druid_icon'] jobs.\nClearing such blockers will provide §Y$tec_loc_planet_features$§! providing similar bonuses.\n\n$tec_loc_c_unlocks_feature$ §H£building£ $building_tec_eco_keepers_sphere$§!\n£building£ $building_tec_eco_keepers_sphere_plural$ are planet-unique and provide additional §Y$tec_loc_housing$§!, §Y$tec_loc_amenities$§! and §Y£job_tec_druid£ Druid§! jobs, increased by §Y$tec_loc_planet_ascension_plural$§!.\n\n$tec_loc_c_modifiers$"
 			#"$tec_loc_c_unlocks_feature$ §H£building£ Miniature Paradises§!\n£building£ $building_paradise_dome$s have §HNo upkeep§! and provide additional §Y$tec_loc_housing$§!, §Y$tec_loc_amenities$§! and £job_tec_druid£ §YDruid§! jobs. Additionally, its £society£ §YTechnology§! is provided if the civic is picked initially.\n\n$tec_loc_c_modifiers$"
+
+		civic_tec_regular_eco_preservers:0 "§L£tec_civic_feature£§!Environmental Preservers"
+		civic_tec_regular_eco_preservers_desc:0 "['concept_tec_feature_civic']\n['concept_tec_terraformer_civic']\n\nThe economy of this Civilization is shaped in accordance with the problems of maximizing the industrial efficiency and usage of natural resources.\n"
+		civic_tec_regular_eco_preservers_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£planet£ Ecological Preservation§!\nUnlocks the ['concept_tec_decision_tec_environment_enhance_icon'] decision, which add valuable §Y$tec_loc_deposits$§! to the planet.\nUnlocks the ['concept_tec_decision_tec_environment_preserve_icon'] decision, which can remove negative §Y£planet£ Planet modifiers§!.\n\n$tec_loc_c_unlocks_feature$ §H£planet£ Environmental Connection§!\nMost §Y£blocker£ Natural Blockers§! provide §Y£housing£ Housing§! and §Y£job£ Jobs§!.\nClearing such blockers will provide §Y$tec_loc_planet_features$§! providing similar bonuses.\n\n$tec_loc_c_unlocks_feature$ §H£building£ $building_tec_eco_preserver_center$§!\n§Y£building£ $building_tec_eco_preserver_center_plural$§! are planet-unique and can be built on £planet£ Habitable Planets, providing §Y£blocker£ Natural Blockers§! each §G25§! years. The process can be accelerated on all planets where the building is present via £edict£ Edict.\n\n$tec_loc_c_modifiers$"
+
 
 		civic_tec_regular_eco_engineers:0 "§L£tec_civic_feature£§!Ecological Engineers"
 		civic_tec_regular_eco_engineers_desc:0 "['concept_tec_feature_civic']\n['concept_tec_terraformer_civic']\n\nTraditionally strong in pro-ecological and climatological sciences, they are masters of shaping and adapting environments to suit their needs."
@@ -1086,6 +1091,17 @@
 		civic_tec_hive_evolutionary_architects: "§P£tec_civic_job£§!Genetic Perfection"
 		civic_tec_hive_evolutionary_architects_desc:0 "['concept_tec_job_addition_civic_researcher']\n\nEvery genome and cell of every being connected to the collective is minutely guarded and tissued accurately.\n"
 		civic_tec_hive_evolutionary_architects_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£building£ $building_tec_evolutionary_lab_1_plural$§!\n£building£ $building_tec_evolutionary_lab_1_plural$ provide ['concept_tec_specialist_job_tec_geneticist_drone_icon'] jobs, which are §Y£society£ Society§! focused researcher drones that also increase §Y$tec_loc_organic_assembly$§!.\n\n$tec_loc_c_initial_pick$ §H£society£ Evolutionary Research§!\nProvides the §Y£society£ $tech_genome_mapping$§! Technology.\nUnlocks the £society£ §Y$tech_gene_tailoring$§! Technology as guaranteed.\n\n$tec_loc_c_modifiers$"
+	# /
+
+	# Netrunners
+		civic_tec_regular_netrunners:0 "§L£tec_civic_job£§!Netruner Agency"
+		civic_tec_regular_netrunners_desc:0 "['concept_tec_job_addition_civic_enforcer']\n['concept_tec_espionage_civic']\n\nTO DO"
+		civic_tec_regular_netrunners_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£building£ $building_tec_netrunner_center$§!\n£building£ $building_tec_netrunner_center_plural$ provide ['concept_tec_specialist_job_tec_netrunner_icon'] jobs, which are §Y£physics£ Technology§! focused enforcers, providing extra scaliong §Y$tec_loc_research_resources$§!.\n\n$tec_loc_c_unlocks_feature$ §H£crime£ Data Interfaces§!\n§Y£job_tec_netrunner£ $job_tec_netrunner_plural$§! output is increased by §G10§!% per active §YSpy Network§!, and each active §YSpy Network§! will provide the empire with +§G2§!% §Y$tec_loc_research_speed$§!.\nActive Spy Networks are spy networks with a leader assigned."
+
+		civic_tec_corporate_netrunners:0 "§L£tec_civic_job£§!Netruner Division"
+		civic_tec_corporate_netrunners_desc:0 "['concept_tec_job_addition_civic_enforcer']\n['concept_tec_espionage_civic']\n\nTO DO"
+		civic_tec_corporate_netrunners_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£building£ $building_tec_netrunner_center$§!\n£building£ $building_tec_netrunner_center_plural$ provide ['concept_tec_specialist_job_tec_netrunner_icon'] jobs, which are §Y£physics£ Technology§! focused enforcers, providing extra scaliong §Y$tec_loc_research_resources$§!.\n\n$tec_loc_c_unlocks_feature$ §H£crime£ Data Interfaces§!\n§Y£job_tec_netrunner£ $job_tec_netrunner_plural$§! output is increased by §G10§!% per active §YSpy Network§!, and each active §YSpy Network§! will provide the empire with +§G2§!% §Y$tec_loc_trade$§!.\nActive Spy Networks are spy networks with a leader assigned."
+
 	# /
 
 	# Research half-swap
@@ -1739,11 +1755,6 @@
 	civic_tec_corporate_espionage:0 "§L£tec_civic_feature£§!Intel Agencies"
 	civic_tec_corporate_espionage_desc:0 "['concept_tec_feature_civic']\n\nTO DO"
 	civic_tec_corporate_espionage_tooltip:0 "TO DO"
-
-	civic_tec_corporate_netrunners:0 "§L£tec_civic_feature£§!Netruner Division"
-	civic_tec_corporate_netrunners_desc:0 "['concept_tec_feature_civic']\n\nTO DO"
-	civic_tec_corporate_netrunners_tooltip:0 "TO DO"
-
 
 	civic_tec_corporate_industrialcorp: "§L£tec_civic_feature£§!Galactic Automated Industrial Association"
 	civic_tec_corporate_industrialcorp_desc:0 "['concept_tec_feature_civic']\n\nThis Megacorporation has merged the concepts of production and profit, with industrial output elevated above all other concerns; refining advanced commodities while exploiting the max from the minus is central to this Megacorporation's business model. If the galaxy didn't want to be tapped, why everything is so profitable? Smog is the price of progress, baby!."
